--- a/proposal.tex
+++ b/proposal.tex
@@ -8,50 +8,97 @@
 
 \theoremstyle{definition}
 \newtheorem{exercise}{Exercise}
+\newtheorem{exercise solution}{Exercise Solution}
+
 
 \begin{document}
 %%% Header starts
 \noindent{\large\textbf{IS-521 Activity Proposal}\hfill
-                \textbf{Your Name}} \\
-         {\phantom{} \hfill \textbf{GitHub ID}} \\
+                \textbf{Donghwan Kwon}} \\
+         {\phantom{} \hfill \textbf{donghwan17}} \\
          {\phantom{} \hfill Due Date: April 15, 2017} \\
 %%% Header ends
 
 \section{Activity Overview}
 
-Briefly describe what this activity is about, and \emph{why} you are
-proposing this activity. (활동에 대한 간략한 설명과 왜 이 활동을
-제안하는지에 대한 이유를 서술.)
+2013년 3월 20일 발생하여 대한민국의 주요 언론과 기업의 전산망이 마비되었던 3.20 사이버테러\cite{320cyberattack} 시나리오를 기반으로 한 Activity이다. 일반 사용자들이 자주 접하는 웹에 대한 공격으로 시작되며, 실제 일어난 사건을 바탕으로 하였기에 처음 보안을 접하는 학생들도 공격이 일어나는 과정과 보안의 중요성을 이해하기 쉽다. 학생들은 하나의 APT 공격 시나리오를 순차적으로 진행하며 다양한 공격들이 유기적으로 이어지는 과정을 하나씩 경험해 볼 수 있다. 또한, 각 공격에 대응하는 방어 Excercise를 추가하거나 공격/방어로 팀을 나누어 경쟁할 수도 있다.
+
+전체적인 시나리오는 일반 사용자의 PC를 감염시켜 내부망에 악성코드를 전파하고 내부망 특정 서버에 추가 공격을 수행하는 내용이다. Activity의 시작은 Watering Hole Attack을 위해 웹 서버를 공격하는 것이다. 웹 공격을 통해 Web Shell을 설치하고 웹 소스코드를 변경하여 악성코드 유포지로 사용자를 연결시킨다. 이후 해당 웹 페이지를 방문한 피해자는 악성코드 유포지로 연결되고 Drive by Download 공격에 의해 myworm 변종을 다운받아 실행한다. myworm 변종은 내부망 IP를 스캔하여 vulnet 서버들을 탐색한다. vulnet 취약점(superuser)을 통해 서버에 로그인한 myworm 변종은 vulnet 서버가 Reverse Shell 방식으로 C\&C 서버에 접속하도록 한다. C\&C 서버는 감염된 대상에게 특정 시간에 악성행위를 수행하도록 명령을 전달한다.
 
 \section{Exercises}
 
-Describe a series of exercises that students will carry out. (학생들이 하게
-될 연습문제를 순차적으로 서술.)
-
 \begin{exercise}
-
-  In this exercise, you do ...
-
+	WebShell Upload
+	
+	취약한 웹 서버에 SQL Injection을 통해 웹 소스코드에 Oneline WebShell을 삽입하거나 File Upload 취약점을 이용하여 WebShell을 업로드한다. 
 \end{exercise}
 
 \begin{exercise}
-
-  In this exercise, you do ...
-
+	Javascript Obfuscation
+	
+	웹 소스파일을 수정하여 페이지의 접근한 사용자를 exploit 수행 웹 페이지로 리다이렉트하는 자바스크립트 코드를 입력한다. 자바스크립트 코드는 한눈에 기능을 알아 볼 수 없도록 Obfuscation을 적용한다.	
 \end{exercise}
 
 \begin{exercise}
+	Drive By Download
+	
+	익스플로잇 페이지에서는 JAVA 또는 브라우저 취약점을 이용하여 Drive By Download 공격을 수행한다. 추가적으로 다운받아 실행될 악성코든는 지난 Activity에서 작성하였던 myworm의 변종이다. 
+\end{exercise}
 
-  In this exercise, you do ...
+\begin{exercise}
+	Myworm variant - Add Reverse Shell function
+	
+	myworm 변종은 내부망 내 IP를 스캔하여 vulnet 서버를 찾는다. superuser 키워드를 통해 vulnet 서버 로그인에 성공한 myworm 변종은 Reeverse Shell 기법을 이용하여 vulnet 서버가 C\&C 서버에 접속하도록 한다.
+\end{exercise}
 
+\begin{exercise}
+	Simple C\&C Server
+	  
+	간단한 C\&C 서버를 작성한다. C\&C 서버는 myworm 변종에 감염된 사용자가 접속하면 악의적인 명령을 전달하고 연결을 종료한다. 악의적인 명령의 내용은 특정 시간에 자신의 github ID를 이름으로한 파일을 생성시키는 것이다. 제출 후 수업시간에서 실시간으로 악성파일이 생성되는지 확인 할 수 있다.
 \end{exercise}
 
 \section{Expected Solutions}
 
-Put expected solutions here.
-(예상되는 답안에 대해서 서술.)
+\begin{exercise solution}
+	WebShell Upload
+	
+	웹 서버의 환경을 파악하고 eval, excute 함수를 사용하거나 WScript.Shell 오프젝트를 이용하는 등의 상황에 맞는 방법을 사용하여 자신만의 WebShell을 작성한다. 작성된 WebShell에는 작성자를 파악할 수 있도록 github ID가 포함되어야 한다. 작성된 파일은 File Upload 취약점이나 SQL Injection 취약점 등을 이용하여 서버에 업로드한다.
+\end{exercise solution}
+
+\begin{exercise solution}
+	Javascript Obfuscation
+	
+	이전 Exercise에서 업로드한 WebShell을 이용하여 웹 소스코드에 자바스크립트 코드를 삽입한다. 삽입될 자바스크립트 코드는 특정 페이지로 redirect하는 기능만을 가지고 있으며 난독화가 적용되어야 한다. Javascript Obfuscator를 작성하거나 기존에 존재하는 방법인 jjencode\cite{jjencode}등을 이용하여 난독화한 자바스크립트 파일을 웹 서버에 업로드 한다.
+	
+\end{exercise solution}
+
+\begin{exercise solution}
+	Drive By Download
+	
+	Metasploit\cite{metasploit}을 이용하여 JAVA 또는 브라우저 취약점을 이용하여 Drive by Download에 사용될 악성코드를 생성한다. 실제 악성행위가 가능한 악성코드이므로 해당 Exercise는 생략할 수 있다. 해당 과정을 생략하는 경우, 수업에서 사용될 exploit 페이지는 수업 전에 제공되어 공통적으로 사용한다. 학생들은 HTTP 요청의 파라미터 값을 변경하여 다운로드 되는 malware만 각각의 것으로 연결되도록 한다.
+\end{exercise solution}
+
+
+\begin{exercise solution}
+	Myworm variant - Add Reverse Shell function
+	
+	이전 Activity에서 작성한 myworm의 변종을 작성한다. 변종은 방화벽이 존재하는 내부망 시스템에 직접적인 쉘 명령을 내릴 수 있도록 Reverse Shell 기능을 추가한다. myworm 변종은 내부망에서 vulnet 서버들을 스캔하여 superuser로 로그인한 후 netcat\cite{netcat}를 이용한 Reverse Shell 기법을 사용한다. 감염된 vulnet 서버는 Reverse Shell 방식을 사용하여 다음 Exercise에서 작성한 C\&C 서버에 접속하도록 한다.
+	
+\end{exercise solution}
+
+
+\begin{exercise solution}
+	Simple C\&C Server
+	
+	C\&C서버는 악성코드에 감염된 Victim들이 접속하기를 기다리고 있다가 accept가 일어나면 하나의 명령을 전달한다. 명령은 contab\cite{cron}을 이용하여 특정 시간에 모든 Victim에게 악성행위가 발생하도록 한다. 악성행위는 수업시간에 자신의 github ID를 이름으로하는 파일을 생성하는 것이다. 이 Exercise의 성공 여부는 실시간으로 수업시간에 확인 가능하다.
+	
+\end{exercise solution}
+
+
 
 \bibliography{references}
+
+
 \bibliographystyle{plainnat}
 
 \end{document}
