--- a/references.bib
+++ b/references.bib
@@ -1,27 +1,30 @@
-@misc{gittutorial,
-    author    = "Code School",
-    title     = "Try Git: Git Tutorial",
-    howpublished = "\url{https://try.github.io/levels/1/challenges/1}"
+@misc{320cyberattack,
+	author    = "Wikipedia",
+	title     = "3.20 cyberattack",
+	howpublished = "\url{https://en.wikipedia.org/wiki/2013_South_Korea_cyberattack}"
 }
 
-@misc{latextutorial,
-    author    = "Claudio Vellage",
-    title     = "LaTeX Tutorial",
-    howpublished = "\url{https://www.latex-tutorial.com/tutorials/}"
+@misc{jjencode,
+	author    = "Yosuke HASEGAWA",
+	title     = "jjencode",
+	howpublished = "\url{http://utf-8.jp/public/jjencode.html}"
 }
 
-@misc{mdtutorial,
-    author    = "GitHub",
-    title     = "Mastering Markdown",
-    howpublished = "\url{https://guides.github.com/features/mastering-markdown/}"
+@misc{metasploit,
+	author    = "Rapid7",
+	title     = "Metasploit Homepage",
+	howpublished = "\url{https://www.metasploit.com/}"
 }
 
-@inproceedings{feliciano:icse2016,
-    author = {Feliciano, Joseph and Storey, Margaret-Anne and Zagalsky, Alexey},
-    title = {Student Experiences Using GitHub in Software Engineering Courses: A
-             Case Study},
-    booktitle = {Proceedings of the 38th International Conference on Software
-                 Engineering Companion},
-    year = {2016},
-    pages = {422--431}
+@misc{netcat,
+	author    = "Wikipedia",
+	title     = "Netcat",
+	howpublished = "\url{https://en.wikipedia.org/wiki/Netcat}"
 }
+
+@misc{cron,
+	author    = "Michael Kerrisk",
+	title     = "cron man page",
+	howpublished = "\url{http://man7.org/linux/man-pages/man8/cron.8.html}"
+}
+
